--- a/profile.css
+++ b/profile.css
@@ -9,6 +9,36 @@ body {
     margin-top: 50px;
     margin-left: 350px;
   }
+
+  nav {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 10px 30px;
+    box-shadow: 0 1px 8px #ddd;
+
+  }
+
+  nav .top .right a{
+    justify-content: flex-end;
+    color: #ddd;
+  }
+
+  nav .top {
+    display: inline-block;
+    vertical-align: top;
+  }
+
+  ul {
+    flex-direction: row;
+    justify-content: flex-start;
+    color: #ddd;
+  }
+
+  li a {
+    color: #ddd;
+  }
+
 .profile-snapshot{
     height: 290px;
     width: 300px;
@@ -18,6 +48,15 @@ body {
     background-color: pink;
     margin-bottom: 4px;
 }
+
+ h1{
+    font-family: 'Planet Kosmos';
+    font-size: 30px;
+    color: aliceblue;
+    margin-right: auto;
+    /* text-align: left; */
+}
+
 #header{
     margin: 3px;
     padding-bottom: 4px;
